2007-05-10  Nick Treleaven  <nick.treleaven@btinternet.com>

 * data/global.tags:
   Update C global tags for GTK+ 2.10 and it's dependencies.


2007-05-09  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/document.c:
   Make backspace unindent when using spaces for indentation.


2007-05-08  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/sci_cb.c:
   Fix auto-indentation when the filetype is not set.


2007-05-08  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/sciwrappers.c, src/sciwrappers.h:
   Added sci_get_line_indentation() and sci_set_line_indentation().
 * src/callbacks.c: Fixed broken increase/decrease indentation when
                    using only spaces for indentation.


2007-05-07  Enrico Tröger  <enrico.troeger@uvena.de>

 * data/filetypes.haskell: Added build instructions.
 * geany.nsi: Prevent installation in a directory without proper
              write permissions under Windows.
              Display an error message instead.


2007-05-06  Enrico Tröger  <enrico.troeger@uvena.de>

 * data/filetypes.haskell, scintilla/KeyWords.cxx,
   scintilla/LexHaskell.cxx, scintilla/Makefile.am,
   scintilla/makefile.win32, src/filetypes.c, src/filetypes.h,
   src/highlighting.c, src/highlighting.h, src/sci_cb.c, THANKS:
   Added new filetype Haskell (patch by Guillaume Hoffmann, thanks).
 * geany.glade, doc/geany.docbook, src/callbacks.c, src/callbacks.h,
   src/interface.c, src/keybindings.c, src/keybindings.h:
   Added menu item to hide or show all additional widgets and renamed
   keybinding to menu_toggleall.


2007-05-05  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/keybindings.c:
   Make marker and matching brace keybindings global.
   (Also indent some case statement bodies).
 * src/sci_cb.c:
   Add brace indenting support for Perl and TCL.


2007-05-05  Enrico Tröger  <enrico.troeger@uvena.de>

 * doc/geany.docbook: Applied patch from John Gabriele which adds some